--- a/explore.ipynb
+++ b/explore.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s3_xlsx_path = Path(\"data\\sheets\\lil sLUg crew S3.xlsx\")"
+    "s3_xlsx_path = Path(\"data/sheets/lil sLUg crew S3.xlsx\")"
    ]
   },
   {
@@ -50,7 +50,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
