--- a/explore.ipynb
+++ b/explore.ipynb
@@ -32,6 +32,18 @@
     "\n",
     "s3_df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b61cb28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "characters = s3_df[\"Character\"].dropna().unique().tolist()\n",
+    "\n",
+    "characters"
+   ]
   }
  ],
  "metadata": {
