schema, inserts, stats, miis, oh my!

--- a/explore.ipynb
+++ b/explore.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
     "from dataclasses import dataclass\n",
     "import pandas as pd\n",
     "from pathlib import Path"
@@ -105,8 +106,8 @@
     "                abbreviation = user.initial\n",
     "                cur.execute(\n",
     "                    \"\"\"\n",
-    "                    INSERT INTO team (name, user_id, abbreviation)\n",
-    "                    VALUES (%s, %s, %s)\n",
+    "                    INSERT INTO team (name, user_id, abbreviation, color)\n",
+    "                    VALUES (%s, %s, %s, 'white')\n",
     "                    \"\"\",\n",
     "                    (team_name, user_id, abbreviation)\n",
     "                )\n",
@@ -118,20 +119,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2de96172",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s3_xlsx_path = Path(\"data/sheets/lil sLUg crew S3.xlsx\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "7273e06c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "s3_xlsx_path = Path(\"data/sheets/lil sLUg crew S3.xlsx\")\n",
+    "\n",
     "s3_df = pd.read_excel(s3_xlsx_path, sheet_name=\"Character List\")\n",
     "\n",
     "s3_df.head()"
@@ -157,7 +150,220 @@
    "outputs": [],
    "source": [
     "# https://docs.google.com/spreadsheets/d/13uVzRaigr4i-QRZAhp4DcbDuhxhJvwxZigWds_Y8CR4/edit?gid=66049872#gid=66049872\n",
-    "\n"
+    "\n",
+    "stat_table_xlsx_path = Path(\"data/sheets/Sluggers Stat Table.xlsx\")\n",
+    "\n",
+    "stat_table_df = pd.read_excel(stat_table_xlsx_path, sheet_name=\"Relevant Stats\", header=2)\n",
+    "stat_table_df = stat_table_df[~stat_table_df[\"Character\"].astype(str).str.startswith(\"Unused\")]\n",
+    "stat_table_df[\"Captain\"] = stat_table_df[\"Captain\"].apply(lambda x: True if str(x).strip().lower() == \"yes\" else False)\n",
+    "stat_table_df[\"Stamina\"] = stat_table_df[\"Stamina\"].astype(str).str.replace(\",\", \"\").astype(int)\n",
+    "\n",
+    "def cleanup_character_name(name):\n",
+    "    cleaned_name = name\n",
+    "    if \"Koopa Troopa\" in str(cleaned_name):\n",
+    "        cleaned_name = cleaned_name.replace(\"Koopa Troopa\", \"Koopa\")\n",
+    "\n",
+    "    if \"Koopa Paratroopa\" in str(cleaned_name):\n",
+    "        cleaned_name = cleaned_name.replace(\"Koopa Paratroopa\", \"Paratroopa\")\n",
+    "\n",
+    "    if str(cleaned_name).endswith(\".\") and not str(cleaned_name).endswith(\"Jr.\"):\n",
+    "        cleaned_name = cleaned_name[:-1]\n",
+    "\n",
+    "    # Match pattern: <Base> (<Thing>)\n",
+    "    m = re.match(r\"^(.*) \\(([^)]+)\\)$\", str(cleaned_name))\n",
+    "    if m:\n",
+    "        base, thing = m.groups()\n",
+    "        if base == \"Dark Bones\":\n",
+    "            cleaned_name = base\n",
+    "        elif thing != \"F\":\n",
+    "            cleaned_name = f\"{thing} {base}\"\n",
+    "\n",
+    "    return cleaned_name\n",
+    "\n",
+    "stat_table_df[\"Character\"] = stat_table_df[\"Character\"].apply(cleanup_character_name)\n",
+    "\n",
+    "stat_table_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e884be7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "column_mapping = {\n",
+    "    \"Character\": \"character\",\n",
+    "    \"Character Class\": \"character_class\",\n",
+    "    \"Captain\": \"captain\",\n",
+    "    \"Throwing Arm\": \"throwing_arm\",\n",
+    "    \"Batting Stance\": \"batting_stance\",\n",
+    "    \"Ability\": \"ability\",\n",
+    "    \"Weight\": \"weight\",\n",
+    "    \"Hitting\\nTrajectory\\n(sweet spot)\": \"hitting_trajectory\",\n",
+    "    \"Slap hit\\ncontact size\": \"slap_hit_contact_size\",\n",
+    "    \"Charge Hit \\nContact Size\": \"charge_hit_contact_size\",\n",
+    "    \"Slap Hit \\nPower?\": \"slap_hit_power\",\n",
+    "    \"Charge Hit \\nPower\": \"charge_hit_power\",\n",
+    "    \"Bunting\": \"bunting\",\n",
+    "    \"Speed\": \"speed\",\n",
+    "    \"Throwing\\nSpeed\": \"throwing_speed\",\n",
+    "    \"Fielding\": \"fielding\",\n",
+    "    \"Curveball \\nSpeed\": \"curveball_speed\",\n",
+    "    \"Fastball\\nSpeed\": \"fastball_speed\",\n",
+    "    \"Curve\": \"curve\",\n",
+    "    \"Stamina\": \"stamina\",\n",
+    "    \"Pitching CSS\": \"pitching_css\",\n",
+    "    \"Batting CSS\": \"batting_css\",\n",
+    "    \"Fielding CSS\": \"fielding_css\",\n",
+    "    \"Speed CSS\": \"speed_css\",\n",
+    "}\n",
+    "\n",
+    "stat_table_df = stat_table_df.rename(columns=column_mapping)\n",
+    "stat_table_df = stat_table_df[list(column_mapping.values())]\n",
+    "stat_table_df.head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "feff009b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# find the overlap between players and the characters in the stat table\n",
+    "characters = stat_table_df[\"character\"].unique().tolist()\n",
+    "\n",
+    "overlap = set(players) & set(characters)\n",
+    "\n",
+    "only_in_players = set(players) - set(characters)\n",
+    "\n",
+    "only_in_characters = set(characters) - set(players)\n",
+    "\n",
+    "list(only_in_characters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52d673e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with psycopg.connect(pg_conn_string) as conn:\n",
+    "    with conn.cursor() as cur:\n",
+    "        for index, row in stat_table_df.iterrows():\n",
+    "            cur.execute(\n",
+    "                \"\"\"\n",
+    "                INSERT INTO stat (character, character_class, captain, throwing_arm, batting_stance, ability, weight, hitting_trajectory, slap_hit_contact_size, charge_hit_contact_size, slap_hit_power, charge_hit_power, bunting, speed, throwing_speed, fielding, curveball_speed, fastball_speed, curve, stamina, pitching_css, batting_css, fielding_css, speed_css)\n",
+    "                VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s)\n",
+    "                \"\"\",\n",
+    "                tuple(row)\n",
+    "            )\n",
+    "\n",
+    "        conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a4b390c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mii_metadata = Path(\"data/miis/mii_metadata.csv\")\n",
+    "\n",
+    "mii_metadata_df = pd.read_csv(mii_metadata)\n",
+    "\n",
+    "mii_metadata_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3d2d6cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import psycopg\n",
+    "\n",
+    "dry_run = True\n",
+    "\n",
+    "with psycopg.connect(pg_conn_string) as conn:\n",
+    "    with conn.cursor() as cur:\n",
+    "        for player_name in players:\n",
+    "            stats_character = player_name if player_name in stat_table_df[\"character\"].values else None\n",
+    "\n",
+    "            if stats_character is None:\n",
+    "                mii_name = player_name\n",
+    "\n",
+    "                if mii_name == \"Crelulu\":\n",
+    "                    mii_name = \"crululu\"\n",
+    "                if mii_name == \"The Grabber\":\n",
+    "                    mii_name = \"grabber\"\n",
+    "\n",
+    "                mii_row = mii_metadata_df[mii_metadata_df[\"mii_name\"] == mii_name]\n",
+    "                if mii_row.empty:\n",
+    "                    mii_row = mii_metadata_df[mii_metadata_df[\"mii_name\"] == mii_name.lower()]\n",
+    "\n",
+    "                if not mii_row.empty:\n",
+    "                    favorite_color = mii_row.iloc[0][\"favorite_color\"]\n",
+    "                    if favorite_color == \"DarkGreen\":\n",
+    "                        favorite_color = \"Green\"\n",
+    "                    favorite_color = re.sub(r'([a-z])([A-Z])', r'\\1 \\2', favorite_color)\n",
+    "                    gender = mii_row.iloc[0][\"gender\"]\n",
+    "                    if gender == \"Female\":\n",
+    "                        stats_character_candidate = f\"{favorite_color} Mii (F)\"\n",
+    "                    else:\n",
+    "                        stats_character_candidate = f\"{favorite_color} Mii\"\n",
+    "                    if stats_character_candidate in stat_table_df[\"character\"].values:\n",
+    "                        stats_character = stats_character_candidate\n",
+    "                    else:\n",
+    "                        raise ValueError(f\"No stats character found for {player_name}, {mii_name}, {favorite_color}, {gender}\")\n",
+    "                else:\n",
+    "                    raise ValueError(f\"No mii metadata found for {player_name}\")\n",
+    "\n",
+    "            image_dir = Path(\"data/sluggerpics/sideview/right\")\n",
+    "            name = player_name\n",
+    "            name_map = {\n",
+    "                \"Shy Guy\": \"Red Shy Guy\",\n",
+    "                \"Koopa\": \"Green Koopa\",\n",
+    "                \"Paratroopa\": \"Red Paratroopa\",\n",
+    "                \"Magikoopa\": \"Red Magikoopa\",\n",
+    "                \"Dark Bones\": \"Gray Dry Bones\",\n",
+    "            }\n",
+    "            if player_name in name_map:\n",
+    "                name = name_map[player_name]\n",
+    "\n",
+    "            name = name.lower().replace('.', '')\n",
+    "            image_filename = f\"{name}.png\"\n",
+    "            image_path = image_dir / image_filename\n",
+    "\n",
+    "            if image_path.is_file():\n",
+    "                image_url = f\"/images/players/sideview/right/{image_filename}\"\n",
+    "            else:\n",
+    "                image_dir_miis = Path(\"website/public/images/miis\")\n",
+    "                image_filename_miis = f\"{player_name}.png\"\n",
+    "                image_path_miis = image_dir_miis / image_filename_miis\n",
+    "\n",
+    "                if image_path_miis.is_file():\n",
+    "                    image_url = f\"/images/miis/{image_filename_miis}\"\n",
+    "                else:\n",
+    "                    print(f\"Image not found for {player_name}\")\n",
+    "\n",
+    "            cur.execute(\n",
+    "                \"\"\"\n",
+    "                INSERT INTO players (name, team_id, image_url, stats_character)\n",
+    "                VALUES (%s, %s, %s, %s)\n",
+    "                \"\"\",\n",
+    "                (player_name, None, None, stats_character)\n",
+    "            )\n",
+    "        if dry_run:\n",
+    "            conn.rollback()\n",
+    "            print(\"Dry run: rolled back all inserts.\")\n",
+    "        else:\n",
+    "            conn.commit()\n",
+    "            print(\"Committed all inserts.\")\n"
    ]
   }
  ],
