players view, it works!

--- a/explore.ipynb
+++ b/explore.ipynb
@@ -287,7 +287,7 @@
    "source": [
     "import psycopg\n",
     "\n",
-    "dry_run = True\n",
+    "dry_run = False\n",
     "\n",
     "with psycopg.connect(pg_conn_string) as conn:\n",
     "    with conn.cursor() as cur:\n",
@@ -343,7 +343,7 @@
     "                image_url = f\"/images/players/sideview/right/{image_filename}\"\n",
     "            else:\n",
     "                image_dir_miis = Path(\"website/public/images/miis\")\n",
-    "                image_filename_miis = f\"{player_name}.png\"\n",
+    "                image_filename_miis = f\"{player_name.lower()}.png\"\n",
     "                image_path_miis = image_dir_miis / image_filename_miis\n",
     "\n",
     "                if image_path_miis.is_file():\n",
@@ -356,7 +356,7 @@
     "                INSERT INTO players (name, team_id, image_url, stats_character)\n",
     "                VALUES (%s, %s, %s, %s)\n",
     "                \"\"\",\n",
-    "                (player_name, None, None, stats_character)\n",
+    "                (player_name, None, image_url, stats_character)\n",
     "            )\n",
     "        if dry_run:\n",
     "            conn.rollback()\n",
