utils for connecting to prod, we big data

--- a/explore.ipynb
+++ b/explore.ipynb
@@ -8,9 +8,13 @@
    "outputs": [],
    "source": [
     "import re\n",
+    "import os\n",
     "from dataclasses import dataclass\n",
     "import pandas as pd\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()"
    ]
   },
   {
@@ -20,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pg_conn_string = \"dbname=wrenchball user=postgres password=postgres host=localhost port=5932\""
+    "pg_conn_string = os.getenv(\"PG_CONN_STRING\", \"dbname=wrenchball user=postgres password=postgres host=localhost port=5932\")"
    ]
   },
   {
